@@ -1,5 +1,5 @@
 /*
- * (C) 2006-2013 see Authors.txt
+ * (C) 2006-2014 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -84,45 +84,44 @@ HRESULT CDXRAllocatorPresenter::SetDevice(IDirect3DDevice9* pD3DDev)
 {
     CheckPointer(pD3DDev, E_POINTER);
 
-    CSize size;
     switch (GetRenderersSettings().nSPCMaxRes) {
         case 0:
         default:
-            size = m_ScreenSize;
+            m_maxSubtitleTextureSize = m_ScreenSize;
             break;
         case 1:
-            size.SetSize(1024, 768);
+            m_maxSubtitleTextureSize.SetSize(1024, 768);
             break;
         case 2:
-            size.SetSize(800, 600);
+            m_maxSubtitleTextureSize.SetSize(800, 600);
             break;
         case 3:
-            size.SetSize(640, 480);
+            m_maxSubtitleTextureSize.SetSize(640, 480);
             break;
         case 4:
-            size.SetSize(512, 384);
+            m_maxSubtitleTextureSize.SetSize(512, 384);
             break;
         case 5:
-            size.SetSize(384, 288);
+            m_maxSubtitleTextureSize.SetSize(384, 288);
             break;
         case 6:
-            size.SetSize(2560, 1600);
+            m_maxSubtitleTextureSize.SetSize(2560, 1600);
             break;
         case 7:
-            size.SetSize(1920, 1080);
+            m_maxSubtitleTextureSize.SetSize(1920, 1080);
             break;
         case 8:
-            size.SetSize(1320, 900);
+            m_maxSubtitleTextureSize.SetSize(1320, 900);
             break;
         case 9:
-            size.SetSize(1280, 720);
+            m_maxSubtitleTextureSize.SetSize(1280, 720);
             break;
     }
 
     if (m_pAllocator) {
         m_pAllocator->ChangeDevice(pD3DDev);
     } else {
-        m_pAllocator = DEBUG_NEW CDX9SubPicAllocator(pD3DDev, size, GetRenderersSettings().fSPCPow2Tex, true);
+        m_pAllocator = DEBUG_NEW CDX9SubPicAllocator(pD3DDev, m_maxSubtitleTextureSize, GetRenderersSettings().fSPCPow2Tex, true);
         if (!m_pAllocator) {
             return E_FAIL;
         }
